--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "alert": "^5.0.10",
     "debug": "^4.3.4",
+    "dom-storage": "^2.1.0",
+    "localStorage": "^1.0.4",
     "request": "^2.88.2"
   }
 }
