Add noncompliant codes

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/wheelyumdev-test/sonar#readme",
   "dependencies": {
     "alert": "^5.0.10",
+    "create-react-app": "^5.0.0",
     "debug": "^4.3.4",
     "dom-storage": "^2.1.0",
     "localStorage": "^1.0.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "websql": "^2.0.3"
   }
 }
